unpackaged/main/default/objects/NF_Banner__c/NF_Banner__c.object-meta.xml
<CustomObject>
    <label>Portal Banner</label>
    <nameField>
        <label>Portal Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Banners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>