unpackaged/main/default/objects/NF_Banner__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines weather this message is active or not</description>
    <inlineHelpText>Determines weather this message is active or not</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>