unpackaged/main/default/objects/NF_Banner__c/fields/BackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>BackgroundColor__c</fullName>
    <defaultValue>TEXT(848484)</defaultValue>
    <description>Enter the background color with a hex number.</description>
    <inlineHelpText>Enter the background color with a hex number.</inlineHelpText>
    <label>Background Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>