unpackaged/main/default/objects/NF_Banner__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>This is the brand id</description>
    <inlineHelpText>This is the brand id</inlineHelpText>
    <label>Brand Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>