unpackaged/main/default/objects/NF_Banner__c/fields/DateEnd__c.field-meta.xml
<CustomField>
    <fullName>DateEnd__c</fullName>
    <defaultValue>TODAY()+1</defaultValue>
    <description>This is the date where the message will stop being displayed.</description>
    <inlineHelpText>This is the date where the message will stop being displayed.</inlineHelpText>
    <label>Date End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>