unpackaged/main/default/objects/NF_Banner__c/fields/DateStart__c.field-meta.xml
<CustomField>
    <fullName>DateStart__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>This is the date when the Message will start to appear.</description>
    <inlineHelpText>This is the date when the Message will start to appear.</inlineHelpText>
    <label>Date Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>