unpackaged/main/default/objects/NF_Banner__c/fields/DisplayonHomepageorTopic__c.field-meta.xml
<CustomField>
    <fullName>DisplayonHomepageorTopic__c</fullName>
    <description>What page should this be displayed:

Home -  home page of the community / portal / digital experience
Topic - Certain Topic Page along with any articles that lookup to this topic.</description>
    <inlineHelpText>What page should this be displayed:

Home -  home page of the community / portal / digital experience
Topic - Certain Topic Page along with any articles that lookup to this topic.</inlineHelpText>
    <label>Where should this go?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <default>true</default>
                <label>Home</label>
            </value>
            <value>
                <fullName>Topic</fullName>
            </value>
            <value>
                <fullName>Custom Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>