unpackaged/main/default/objects/NF_Banner__c/fields/ImageFile__c.field-meta.xml
<CustomField>
    <fullName>ImageFile__c</fullName>
    <description>This is used to display any image.</description>
    <inlineHelpText>This is used to display any image.</inlineHelpText>
    <label>Image File</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>