unpackaged/main/default/objects/NF_Banner__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>This is the message that will be shown in the banner.</description>
    <inlineHelpText>This is the message that will be shown in the banner.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>