unpackaged/main/default/objects/NF_Banner__c/fields/PageKey__c.field-meta.xml
<CustomField>
    <fullName>PageKey__c</fullName>
    <description>This is the page key when selecting the custom page.</description>
    <inlineHelpText>This is the page key when selecting the custom page.</inlineHelpText>
    <label>Page Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>