unpackaged/main/default/objects/NF_Banner__c/fields/TopicId__c.field-meta.xml
<CustomField>
    <fullName>TopicId__c</fullName>
    <description>This is the topic id, this is needed if we choose the choice to display this in topic pages.</description>
    <inlineHelpText>This is the topic id, this is needed if we choose the choice to display this in topic pages.</inlineHelpText>
    <label>Topic Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>