unpackaged/main/default/objects/NF_Banner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>DisplayonHomepageorTopic__c</columns>
    <columns>DateStart__c</columns>
    <columns>DateEnd__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>